# BitcoinMiningApp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FileDownloader.cpp  FileDownloader.h  InfoDialog.cpp  InfoDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.h.autosave  ProjectManager.cpp  ProjectManager.h  SettingsDialog.cpp  SettingsDialog.h  UnRAR64.lib  archive-comment.txt  createInstaller.sh  main.cpp  moveLauncherToDebug.sh  preparePackage.sh  qml.qrc  resources.qrc  xmrstak.h
installer/: README.txt  info_after.txt  info_before.txt  installer.iss  license.rtf
installer/files/: config.txt  pools.txt
installer/settings_files/: cpu.txt
launcher/: CMakeLists.txt  CMakeSettings.json  FileDownloader.cpp  FileDownloader.h  MainWindow.cpp  MainWindow.h  main.cpp  unrar.cpp  unrar.hpp
licenses/: OpenSSL.txt  Qt.txt
qml/: main.qml
